<resources>
    <string name="app_name">Controle de Visitas</string>

    <!-- MainMenu Toolbar Items -->
    <string name="new_visit">Nova Visita</string>
    <string name="start_visit">Iniciar Visita</string>
    <string name="schedule_visit">Agendar Visita</string>
    <string name="filter_visits">Filtrar Visitas</string>
    <string name="manage_clients">Gerenciar Clientes</string>
    <string name="visit_images">Imagens da visita</string>
    <string name="filtered_visits">Visitas Filtradas</string>
    <string name="help">Ajuda</string>
    <string name="client_data">Dados do Cliente</string>

    <!-- Titles -->
    <string name="main_title">Visitas Registradas</string>

    <!-- MainActivity Date Toolbar -->
    <string name="left_arrow">&lt;</string>
    <string name="right_arrow">&gt;</string>


    <!-- StartVisitActivity -->
    <string name="client">Cliente:</string>
    <string name="visit_start_time">Início da visita:</string>
    <string name="visit_closing_time">Encerramento da visita:</string>
    <string name="at_time">às</string>
    <string name="to_date">até</string>
    <string name="visit_reason">Motivo da visita:</string>
    <string name="visit_period">Período:</string>
    <string name="all_periods">Todos</string>
    <string name="select_period">Selecionar período</string>


    <string name="im_cd_calendar">Selecionar data</string>
    <string name="im_cd_clock">Selecionar hora</string>
    <string name="im_cd_add_client">Novo Cliente</string>
    <string name="im_cd_image_gallery">Galeria de imagens</string>
    <string name="im_cd_audio_gallery">Galeria de áudios</string>
    <string name="im_cd_add_keyword">Adicionar palavra-chave</string>

    <string name="et_hint_calendar">Data de início</string>
    <string name="et_hint_startcalendar">Data inicial</string>
    <string name="et_hint_endcalendar">Data final</string>
    <string name="et_hint_clock">Hora de início</string>


    <string name="visit_detail">Detalhes da visita</string>

    <string name="notes">Notas</string>
    <string name="keywords">Palavras-chave</string>
    <string name="keyword">Palavra-chave</string>
    <string name="insert_keyword">Insira uma palavra-chave...</string>
    <string name="no_keywords">Não há palavras-chave nessa visita.</string>
    <string name="close_visit">Encerrar Visita</string>
    <string name="cancel_visit"><u>Cancelar Visita</u></string>
    <string name="save_visit">Salvar</string>
    <string name="delete_visit">Remover Visita</string>
    <string name="modify_client">Alterar</string>
    <string name="delete_client">Remover Cliente</string>
    <string name="save_client">Salvar</string>
    <string name="client_name_toast">Não é possível adicionar um cliente sem nome.</string>


    <string name="client_name">Nome do Cliente</string>
    <string name="client_contact">Contato</string>
    <string name="client_phone">Telefone</string>
    <string name="client_mail">E-mail</string>
    <string name="client_save">Salvar Cliente</string>

    <string name="status_inprogress">Em Andamento</string>
    <string name="status_completed">Encerrada</string>
    <string name="status_scheduled">Agendada</string>

    <string name="no_visits">Não há visitas nessa data</string>


    <!-- Java String Resources -->
    <string name="no_clients_toast">Não há clientes cadastrados. Redirecionando ao cadastro de cliente... </string>
    <string name="no_clients_toast2">Não há clientes cadastrados.</string>
    <string name="delete_alertdialog_message">Deseja realmente excluir essa visita?</string>
    <string name="delete_image_alertdialog_message">Deseja realmente remover essa imagem da visita?</string>
    <string name="delete_audio_alertdialog_message">Deseja realmente remover esse áudio da visita?</string>
    <string name="delete_client_alertdialog_message">Deseja realmente remover esse cliente? Todas as visitas relacionadas a ele serão apagadas!</string>
    <string name="closetime_alertdialog_message">A visita será encerrada com a data e hora atuais.</string>
    <string name="scheduled_visit_dialog">Essa é uma visita agendada. O que deseja fazer?</string>
    <string name="save_changes_dialog">Deseja salvar alterações antes de sair?</string>
    <string name="no_modify_client_name">Não é possível alterar o nome do cliente.</string>
    <string name="change_dateandtime">Alterar Data/Hora</string>
    <string name="cancel">Cancelar</string>
    <string name="cancel_scheduled"><u>Cancelar Agendamento</u></string>
    <string name="cancel_scheduled_alertdialog">Deseja realmente cancelar esse agendamento?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="no_image_available">Não há imagens nessa visita!</string>
    <string name="client_field">Cliente</string>
    <string name="scheduled_visits">Visitas agendadas</string>
    <string name="filter_by">Filtrar por:</string>
    <string name="filtered_by">Filtro por:</string>
    <string name="toast_keyword_needed">Insira uma palavra-chave para filtrar.</string>
    <string name="no_filter_results">Não há resultados para este filtro.</string>
    <string name="visit_audios">Áudios da visita</string>
    <string name="toast_start_recording">Gravando áudio...</string>
    <string name="toast_stop_recording">Gravação finalizada! Salvando arquivo...</string>
    <string name="toast_audio_saved">Áudio salvo com sucesso!</string>
    <string name="audio">Áudio</string>
    <string name="toast_visit_previous_date">Impossível iniciar uma visita em data anterior à atual. Selecione outra data.</string>
    <string name="audio_record_helper">Mantenha o botão acima pressionado para iniciar gravação.</string>

    <string name="no_audios">Não há audios nessa visita!</string>

    <string name="toast_visit_scheduled">Visita agendada com sucesso!</string>


    <string name="help1_question">Como faço para iniciar uma nova visita?</string>
    <string name="help1_answer">Ao chegar no cliente, é possível iniciar uma nova visita de duas formas: ou pelo acesso do menu na barra
        superior e clicando em "Nova visita", ou selecionando o ícone "+" na parte inferior direita da tela principal. Isso dará acesso à
        tela de "Nova visita", onde é possível iniciar a visita imediatamente apenas selecionando o cliente e opcionalmente informando
        o motivo da visita. Já para alteração de data, a visita será agendada para a data escolhida.
          </string>
    <string name="help2_question">Como faço para agendar uma nova visita?</string>
    <string name="help2_answer">Os passos são os mesmos que os de início de uma nova visita, mas na tela de "Nova visita", ao selecionar
        a data desejada para o agendamento da visita, o botão automaticamente será alterado para "Agendar visita". Caso a data seja a mesma
        que a atual, o botão se manterá "Iniciar visita".</string>
    <string name="help3_question">Como faço para adicionar um cliente?</string>
    <string name="help3_answer">Na tela principal, acesse o menu da barra superior e pressione "Gerenciar Clientes". Nessa tela aparecerão
        todos os clientes cadastrados e, no canto inferior direito, o botão "+" permitirá que novos clientes sejam adicionados. Outra opção
        é na tela "Nova visita", onde é possível acessar o botão de novo cliente ao lado da lista de seleção de clientes.</string>
    <string name="help4_question">Como faço para adicionar informações à visita?</string>
    <string name="help4_answer">Selecione a visita em andamento na tela principal, e nos detalhes da visita será possível alterar suas
        anotações, bem como inserir imagens, áudios e palavras-chave sobre a visita. Após as alterações, selecione o botão "Salvar" no menu
        superior ou apenas pressione o botão voltar do dispositivo que as informações serão salvas.</string>
    <string name="help5_question">Como faço para adicionar e remover imagens na visita?</string>
    <string name="help5_answer">Na tela de "Detalhes da visita", clique no botão com ícone de uma imagem. Será aberta a galeria de imagens
        da visita, onde ao selecionar o botão de "+" será possível inserir uma nova imagem à visita. Para remover uma imagem, basta clicar
        sobre ela e manter pressionado até que a tela de confirmação de exclusão surja.</string>
    <string name="help6_question">Como faço para adicionar e remover áudios na visita?</string>
    <string name="help6_answer">Na tela de "Detalhes da visita", clique no botão com ícone de um microfone. Será aberta a galeria de áudios
        da visita, onde para gravar um áudio deve-se clicar e manter pressionado o ícone do microfone, e soltá-lo ao finalizar. Ao soltar,
        o áudio será salvo e aparecerá na lista de áudios abaixo do ícone. Para removê-lo, basta tocar na lixeira ao lado do áudio.</string>
    <string name="help7_question">Como faço para filtrar visitas?</string>
    <string name="help7_answer">Na tela principal, acesse o menu na barra superior e pressione "Filtrar Visitas".
        Na tela aberta aparecerão as opções de filtro, bastando preenchê-las de acordo com o filtro e tocar em "Filtrar Visitas". </string>
</resources>
