<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.edu.ifspsaocarlos.sdm.controlevisitas.MainActivity">
    <item
        android:id="@+id/menu_item_start_visit"
        android:orderInCategory="100"
        android:title="@string/new_visit"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_filter_visits"
        android:orderInCategory="100"
        android:title="@string/filter_visits"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_manage_clients"
        android:orderInCategory="100"
        android:title="@string/manage_clients"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never" />
</menu>
