<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterActivity">

    <TextView
        android:id="@+id/ac_filter_tvclient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:labelFor="@id/ac_filter_spinnerclient"
        android:text="@string/client"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/ac_filter_spinnerclient"
        style="@android:style/Widget.Holo.Light.Spinner"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="5"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ac_filter_tvclient" />

    <TextView
        android:id="@+id/ac_filter_tvperiod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/visit_period"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ac_filter_spinnerclient" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:checkedButton="@id/ac_filter_rdperiodall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ac_filter_tvperiod">

        <RadioButton
            android:id="@+id/ac_filter_rdperiodall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/all_periods" />

        <RadioButton
            android:id="@+id/ac_filter_rdperiodselect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/select_period" />
    </RadioGroup>

    <!--TODO: FIX NESTED LINEAR WEIGHT -->

    <LinearLayout
        android:id="@+id/ac_filter_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="11"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">


        <LinearLayout
            android:id="@+id/ac_filter_lndate1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="horizontal"
            android:weightSum="9">

            <EditText
                android:id="@+id/ac_filter_etdate1"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/et_hint_startcalendar"
                android:inputType="date"
                android:textAlignment="center" />

            <ImageButton
                android:id="@+id/ac_filter_ibcalendar1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@android:color/transparent"
                android:contentDescription="@string/im_cd_calendar"
                android:tint="@color/colorPrimaryLight"
                app:srcCompat="@drawable/ic_today_black_24dp" />
        </LinearLayout>


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/to_date" />

        <LinearLayout
            android:id="@+id/ac_filter_lndate2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="horizontal"
            android:weightSum="9">

            <EditText
                android:id="@+id/ac_filter_etdate2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/et_hint_endcalendar"
                android:inputType="time"
                android:textAlignment="center" />

            <ImageButton
                android:id="@+id/ac_filter_ibcalendar2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@android:color/transparent"
                android:contentDescription="@string/im_cd_clock"
                android:tint="@color/colorPrimaryLight"
                app:srcCompat="@drawable/ic_today_black_24dp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/ac_filter_tvkeyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:labelFor="@id/ac_filter_etkeyword"
        android:text="@string/keyword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ac_filter_linearlayout" />

    <EditText
        android:id="@+id/ac_filter_etkeyword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxLines="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ac_filter_tvkeyword" />

    <Button
        android:id="@+id/ac_filter_btfilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="92dp"
        android:background="@color/colorAccent"
        android:text="@string/filter_visits"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ac_filter_etkeyword" />


</android.support.constraint.ConstraintLayout>